[package]
name = "day13"
version = "0.1.0"
authors = ["Mathieu Letendre-Jauniaux <Mathieu.Letendre-Jauniaux@agilebits.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.1"
itertools = "0.9"
thiserror = "1.0"
utils = {path = "../utils"}