[package]
name = "day19"
version = "0.1.0"
authors = ["Mathieu Letendre-Jauniaux <Mathieu.Letendre-Jauniaux@agilebits.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
itertools = "0.9"
once_cell = "1.5"
regex = "1.4"