[package]
name = "day8"
version = "0.1.0"
authors = ["Mathieu Letendre-Jauniaux <Mathieu.Letendre-Jauniaux@agilebits.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4"
thiserror = "1.0"
displaydoc = "0.1"